# slatedb-rb

./: .gitignore  .mise.toml  .rubocop.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  slatedb.gemspec
.buildkite/: pipeline.yml  release.pipeline.yml
.buildkite/steps/: build-and-test.sh  clippy.sh
.github/workflows/: ci.yml
ext/slatedb/: Cargo.toml  extconf.rb
ext/slatedb/src/: admin.rs  database.rs  errors.rs  iterator.rs  lib.rs  merge_ops.rs  metrics.rs  reader.rs  runtime.rs  snapshot.rs  transaction.rs  utils.rs  write_batch.rs
lib/: slatedb.rb
lib/slatedb/: admin.rb  database.rb  iterator.rb  metrics.rb  reader.rb  snapshot.rb  transaction.rb  version.rb  write_batch.rb
spec/: admin_spec.rb  checkpoint_spec.rb  database_spec.rb  flush_options_spec.rb  iterator_spec.rb  mark_read_spec.rb  merge_spec.rb  metrics_spec.rb  reader_spec.rb  scan_prefix_spec.rb  scan_prefix_suffix_spec.rb  seqnum_spec.rb  snapshot_spec.rb  spec_helper.rb  status_spec.rb  thread_safety_spec.rb  transaction_spec.rb  write_batch_spec.rb  write_handle_spec.rb
