[package]
name = "slatedb"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Ruby bindings for SlateDB"

[lib]
name = "slatedb"
crate-type = ["cdylib"]

[dependencies]
slatedb = "0.10"
magnus = { version = "0.8.2", features = ["rb-sys"] }
rb-sys = { version = "0.9.123", features = ["stable-api-compiled-fallback"] }
tokio = { version = "1.47.2", features = ["rt-multi-thread", "sync"] }
bytes = "1.11.0"
url = "2.5.7"
once_cell = "1.21.3"
log = "0.4.29"
uuid = "1.19.0"
