[package]
name = "slatedb"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Ruby bindings for SlateDB"

[lib]
name = "slatedb"
crate-type = ["cdylib"]

[dependencies]
slatedb = "0.14.1"
magnus = { version = "0.8.2", features = ["rb-sys"] }
rb-sys = { version = "0.9.128", features = ["stable-api-compiled-fallback"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync"] }
bytes = "1.11.1"
serde_json = "1.0.145"
url = "2.5.8"
once_cell = "1.21.4"
log = "0.4.29"
uuid = "1.23.1"
